# esp32-utils

./: CConsole.cpp  CJsonParser.cpp  CMakeLists.txt  CSpiffsTraceTask.cpp  CSpiffsTraceTask.h  CUsbUart.cpp  Kconfig.projbuild  README.md  idf_component.yml  utils.cpp
include/: CConsole.h  CJsonParser.h  CUsbUart.h  utils.h
test/: CMakeLists.txt  test_utils.cpp
